--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,7 +1,16 @@
+#map { 
+    height: 300px;
+    width: 300px;
+    margin-left: 100px;
+   
+    margin-top: 120px;
+    align-self: flex-end;
+}
+
 
 
 .form-control{
-    padding-left:20px;
+    padding-left:40px;
     margin:10px;
     max-width: 800px;
 }
